--- a/public/index.html
+++ b/public/index.html
@@ -9,48 +9,99 @@
 
 <body>
     <h1>Todo List</h1>
+
     <section>
-        <h2>Přidat nový úkol</h2>
+        <h2>Přidat nový kus šrotu</h2>
         <form id="todo-form">
-            <div> <label for="name">Název úkolu:</label>
-                <input type="text" id="name" name="name" required>
+            <div>
+                <label for="name">Název náhradního dílu:</label>
+                <input type="text" id="name" name="name" required maxlength="100">
             </div>
-            <div> <label for="description">Popis:</label>
-                <textarea id="description" name="description"></textarea>
+            <div>
+                <label for="description">Popis:</label>
+                <textarea id="description" name="description" maxlength="500"></textarea>
             </div>
-            <div> <button type="submit">Přidat úkol</button>
+            <div>
+                <button type="submit">Přidat náhradní díl</button>
             </div>
         </form>
     </section>
+
     <section>
-        <h2>Seznam úkolů</h2>
-        <ul id="todo-list"> <!-- Zde se budou zobrazovat úkoly -->
+        <h2>Seznam náhradních dílů</h2>
+        <ul id="todo-list">
+            <!-- Zde se budou zobrazovat úkoly -->
         </ul>
     </section>
-    <script>
-        document.addEventListener('DOMContentLoaded', fetchTodos);
 
-        document.getElementById('todo-form').addEventListener('submit', async (e) => {
-            e.preventDefault();
-            const name = document.getElementById('name').value;
-            const description = document.getElementById('description').value;
-            try {
-                const response = await fetch('/api/items', {
-                    method: 'POST',
-                    headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify({ name, description })
-                });
-                if (response.ok) {
-                    document.getElementById('todo-form').reset();
-                    fetchTodos();
-                } else {
-                    alert('Chyba při přidávání úkolu');
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            fetchTodos();
+
+            // Přidání nového dílu
+            document.getElementById('todo-form').addEventListener('submit', async (e) => {
+                e.preventDefault();
+                const name = document.getElementById('name').value.trim();
+                const description = document.getElementById('description').value.trim();
+
+                if (!name) {
+                    alert('Název je povinný');
+                    return;
                 }
-            } catch (error) {
-                console.error('Chyba:', error);
-            }
+
+                try {
+                    const response = await fetch('/api/items', {
+                        method: 'POST',
+                        headers: { 'Content-Type': 'application/json' },
+                        body: JSON.stringify({ name, description })
+                    });
+                    if (response.ok) {
+                        document.getElementById('todo-form').reset();
+                        fetchTodos();
+                    } else {
+                        alert('Chyba při přidávání úkolu');
+                    }
+                } catch (error) {
+                    console.error('Chyba:', error);
+                }
+            });
+
+            // Delegování událostí pro tlačítka "Smazat" a "Upravit"
+            document.getElementById('todo-list').addEventListener('click', async (e) => {
+                const id = e.target.dataset.id;
+                if (!id) return;
+
+                if (e.target.classList.contains('delete-btn')) {
+                    try {
+                        await fetch(`/api/items/${id}`, { method: 'DELETE' });
+                        fetchTodos();
+                    } catch (err) {
+                        console.error('Chyba při mazání:', err);
+                    }
+                }
+
+                if (e.target.classList.contains('edit-btn')) {
+                    try {
+                        const response = await fetch(`/api/items/${id}`);
+                        const item = await response.json();
+                        const newName = prompt('Nový název:', item.name);
+                        const newDesc = prompt('Nový popis:', item.description || '');
+                        if (newName !== null) {
+                            await fetch(`/api/items/${id}`, {
+                                method: 'PUT',
+                                headers: { 'Content-Type': 'application/json' },
+                                body: JSON.stringify({ name: newName.trim(), description: newDesc.trim() })
+                            });
+                            fetchTodos();
+                        }
+                    } catch (err) {
+                        console.error('Chyba při úpravě:', err);
+                    }
+                }
+            });
         });
 
+        // Načíst všechny díly ze serveru
         async function fetchTodos() {
             try {
                 const response = await fetch('/api/items');
@@ -59,7 +110,11 @@
                 todoList.innerHTML = '';
                 todos.forEach(todo => {
                     const li = document.createElement('li');
-                    li.innerHTML = `<strong>${todo.name}</strong>: ${todo.description || ''}`;
+                    li.innerHTML = `
+                        <strong>${todo.name}</strong>: ${todo.description || ''}
+                        <button class="delete-btn" data-id="${todo.id}">Smazat</button>
+                        <button class="edit-btn" data-id="${todo.id}">Upravit</button>
+                    `;
                     todoList.appendChild(li);
                 });
             } catch (error) {
