feat: renamed header to "Sklad náhradních dílů"

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <h1>Todo List</h1>
+    <h1>Sklad náhradních dílů</h1>
 
     <section>
         <h2>Přidat nový kus šrotu</h2>
