feat: basic html functionality

--- a/public/index.html
+++ b/public/index.html
@@ -1,73 +1,44 @@
 <!DOCTYPE html>
 <html lang="cs">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Todo List</title>
+  <meta charset="UTF-8" />
+  <title>Sklad náhradních dílů</title>
+  <link rel="stylesheet" href="assets/styles.css" />
 </head>
-
 <body>
-    <h1>Todo List</h1>
-    <section>
-        <h2>Přidat nový úkol</h2>
-        <form id="todo-form">
-            <div> <label for="name">Název úkolu:</label>
-                <input type="text" id="name" name="name" required>
-            </div>
-            <div> <label for="description">Popis:</label>
-                <textarea id="description" name="description"></textarea>
-            </div>
-            <div> <button type="submit">Přidat úkol</button>
-            </div>
-        </form>
-    </section>
-    <section>
-        <h2>Seznam úkolů</h2>
-        <ul id="todo-list"> <!-- Zde se budou zobrazovat úkoly -->
-        </ul>
-    </section>
-    <script>
-        document.addEventListener('DOMContentLoaded', fetchTodos);
+  <h1>Sklad náhradních dílů</h1>
 
-        document.getElementById('todo-form').addEventListener('submit', async (e) => {
-            e.preventDefault();
-            const name = document.getElementById('name').value;
-            const description = document.getElementById('description').value;
-            try {
-                const response = await fetch('/api/items', {
-                    method: 'POST',
-                    headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify({ name, description })
-                });
-                if (response.ok) {
-                    document.getElementById('todo-form').reset();
-                    fetchTodos();
-                } else {
-                    alert('Chyba při přidávání úkolu');
-                }
-            } catch (error) {
-                console.error('Chyba:', error);
-            }
-        });
+  <section id="parts-section">
+    <h2>Díly</h2>
+    <form id="part-form">
+      <input type="text" id="part-name" placeholder="Název dílu" required />
+      <input type="number" id="part-number" placeholder="Katalogové číslo" required />
+      <button type="submit">Přidat díl</button>
+    </form>
+    <ul id="parts-list"></ul>
+  </section>
 
-        async function fetchTodos() {
-            try {
-                const response = await fetch('/api/items');
-                const todos = await response.json();
-                const todoList = document.getElementById('todo-list');
-                todoList.innerHTML = '';
-                todos.forEach(todo => {
-                    const li = document.createElement('li');
-                    li.innerHTML = `<strong>${todo.name}</strong>: ${todo.description || ''}`;
-                    todoList.appendChild(li);
-                });
-            } catch (error) {
-                console.error('Chyba při načítání úkolů:', error);
-            }
-        }
-    </script>
+  <section id="suppliers-section">
+    <h2>Dodavatelé</h2>
+    <form id="supplier-form">
+      <input type="text" id="supplier-name" placeholder="Název dodavatele" required />
+      <input type="text" id="supplier-contact" placeholder="Kontakt" />
+      <button type="submit">Přidat dodavatele</button>
+    </form>
+    <ul id="suppliers-list"></ul>
+  </section>
 
+  <section id="orders-section">
+    <h2>Objednávky</h2>
+    <form id="order-form">
+      <select id="order-part" required></select>
+      <select id="order-supplier" required></select>
+      <input type="date" id="order-date" required />
+      <button type="submit">Vytvořit objednávku</button>
+    </form>
+    <ul id="orders-list"></ul>
+  </section>
+
+  <script src="assets/script.js"></script>
 </body>
-
 </html>
