--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,9 @@
   <section id="orders-section">
     <h2>Objednávky</h2>
     <form id="order-form">
+      <label for="order-part">Díl:</label>
       <select id="order-part" required></select>
+      <label for="order-supplier">Dodavatel:</label>
       <select id="order-supplier" required></select>
       <input type="date" id="order-date" required />
       <button type="submit">Vytvořit objednávku</button>
