feat: added tailwind and finished vitepress

--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <title>Sklad náhradních dílů</title>
-  <link rel="stylesheet" href="assets/styles.css" />
+  <link rel="stylesheet" href="assets/output.css" />
 </head>
-<body>
+<body class="flex flex-col items-center justify-center">
   <h1>Sklad náhradních dílů</h1>
 
   <section id="parts-section">
